--- a/CSS.css
+++ b/CSS.css
@@ -1,81 +1,3 @@
-/* 
-/* General Styles 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif; 
-    background-color: #f0f0f0; 
-}
-h1 {
-    text-align: center;
-    margin-top: 20px; 
-}
-
-h2 {
-    text-align: center;
-    margin-bottom: 20px; 
-}
-
-/* Flexbox Container 
-.box_containers {
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: center;   
-    margin: 0 auto; 
-}
-
-/* Box Styles 
-.box {
-    height: 180px; 
-    width: 180px; 
-    border: 4px solid black;
-    border-radius: 40px;
-    margin: 20px;
-    transition: transform 0.2s; 
-}
-
-.box:hover {
-    transform: scale(1.05); 
-}
-
-/* Color Classes 
-.blueviolet {
-    background-color: blueviolet;
-}
-
-.yellowgreen {
-    background-color: yellowgreen;
-}
-
-.brown {
-    background-color: brown;
-}
-
-.purple {
-    background-color: purple;
-}
-
-.color {
-    background-color: white;
-}
-
-/* Responsive Adjustments 
-@media screen and (max-width: 768px) {
-    .box {
-        height: 150px; 
-        width: 150px; 
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .box {
-        height: 120px; 
-        width: 120px; 
-    }
-} */
-
-
-
 /* General Styles */
 body {
     margin: 0;
@@ -104,6 +26,13 @@ h1 {
     font-size: 3em; 
     color: #ffffff; 
     text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); 
+}
+
+#btn{
+    height: 100%;
+    width: 100%;
+    background-color: yellow;
+    font-size: 2rem;
 }
 
 h2 {
