--- a/CSS.css
+++ b/CSS.css
@@ -4,12 +4,12 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif; 
     background: linear-gradient(135deg, #a0c4ff, #ff677d);
-    background-size: 400% 400%;
     animation: gradientAnimation 15s ease infinite; 
+    background-size: 400% 400%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start; /* Change to flex-start to align content at the top */
     height: 100vh; 
     overflow: hidden; 
 }
@@ -20,24 +20,17 @@ body {
     100% { background-position: 0% 50%; }
 }
 
-h1 {
-    text-align: center;
-    margin-top: 20px; 
-    font-size: 3em; 
-    color: #ffffff; 
-    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); 
-}
-
-#btn{
-    height: 100%;
+.navbar {
+    height: 4rem;
     width: 100%;
-    background-color: yellow;
-    font-size: 2rem;
+    background-color: #6A5ACD;
 }
 
+
+/* Add margin-top to create space below the navbar */
 h2 {
     text-align: center;
-    margin-bottom: 20px; 
+    margin: 30px 0; 
     font-size: 1.8em; 
     color: #ffffff; 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
@@ -49,6 +42,7 @@ h2 {
     flex-wrap: wrap; 
     justify-content: center;   
     margin: 0 auto; 
+    padding: 20px; 
 }
 
 /* Box Styles */
@@ -70,7 +64,7 @@ h2 {
 
 /* Hover Effects */
 .box:hover {
-    transform: scale(1.1); 
+    transform: scale(1.05); 
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.6); 
     filter: brightness(1.1); 
 }
@@ -80,12 +74,12 @@ h2 {
     background-color: blueviolet;
 }
 
-.yellowgreen {
-    background-color: yellowgreen;
+.yellow {
+    background-color: yellow;
 }
 
 .brown {
-    background-color: brown;
+    background-color: violet;
 }
 
 .purple {
